--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.BOOT_COMPLETED" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 	<uses-sdk
 		android:minSdkVersion="11"
@@ -53,6 +54,16 @@
 				</action>
 			</intent-filter>
 		</receiver>
+		<receiver android:name=".misc.BootCompletedReceiver" >
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+			</intent-filter>
+		</receiver>
+		<receiver android:name=".misc.NetworkChangeReceiver" >
+			<intent-filter>
+				<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+			</intent-filter>
+		</receiver>
 
 		<service
 			android:name=".xbmc.XBMCService"
@@ -60,9 +71,6 @@
 			android:exported="false"
 			android:label="pebbleBMC XBMC Service"
 			android:permission="android.permission.INTERNET" >
-			<intent-filter>
-				<action android:name="android.intent.action._BOOT_COMPLETED" />
-			</intent-filter>
 		</service>
 
 		<activity
